--- a/src/app/html/canvas/form.component.html
+++ b/src/app/html/canvas/form.component.html
@@ -1,3 +1,3 @@
-<div id="_domContainer" (click)="changeSelectElement($event)" (touchstart)="changeSelectElement($event)" [style.height]="(height)+'px'" [style.minHeight]="(windowHeight-offset)+'px'" [ng2-droppable2]="true" (response) = "processResponse($event)" class="container-fluid" style="background: #555; padding: 20px; height: 110%; resize:vertical; overflow:none; position: relative; z-index: 0;">
+<div id="_domContainer" (click)="changeSelectElement($event)" (touchstart)="changeTouchElement($event)" [style.height]="(height)+'px'" [style.minHeight]="(windowHeight-offset)+'px'" [ng2-droppable2]="true" (response) = "processResponse($event)" class="container-fluid" style="background: #555; padding: 20px; height: 110%; resize:vertical; overflow:none; position: relative; z-index: 0;">
 
 </div>
